# testaiagent

./: Cargo.toml  app.js  index.html  styles.css  test
migrations/0001_init/: down.sql  up.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
static/: app.js  index.html  styles.css
