[package]
name = "auramatch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "services", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite", "chrono", "uuid", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
argon2 = "0.5"
rand_core = "0.6"
time = "0.3"
tower-cookies = "0.9"
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
